--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -11,10 +11,10 @@
       <p>Drop a note.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span>Maryland, US</p>
       <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: pradhanmanish33@gmail.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: manishkp35@gmail.com</p>
 
-      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/profile.php?id=100012588193976"><span class="fa fa-facebook"></span></a>
-      <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/manish-pradhan?trk=nav_responsive_tab_profile"><span class="fa fa-linkedin"></span></a>
+      <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/"><span class="fa fa-facebook"></span></a>
+      <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/"><span class="fa fa-linkedin"></span></a>
 
     </div>
     <div class="col-md-8">
